# OmniAgent

./: .dockerignore  .env.example  .gitignore  CONVERSATION_SUMMARY.md  Dockerfile.backend  README.md  docker-compose.yml  logger.py  main.py  memory.py  model.py  package-lock.json  pyproject.toml  rag.py  requirements.txt  summary.md  test.py  test_agent_service.py  test_stream_agent.py  tools.py  项目总结.md
agent/: __init__.py  executor.py
agent_core/: __init__.py
agent_core/agent/: __init__.py  checkpointer.py  config.py  executor.py  middleware.py  model_factory.py
agent_core/config/: __init__.py  settings.py
agent_core/knowledge/: my_knowledge.txt
agent_core/logger/: __init__.py
agent_core/prompts/: system.txt
agent_core/rag/: __init__.py  builder.py  chain.py  config.py  retriever.py
agent_core/tests/: test_all.py
agent_core/tools/: __init__.py  rag_tool.py  weather_tool.py
backend/: main.py
backend/controllers/: chat_controller.py
backend/routers/: chat.py
backend/schemas/: chat.py
backend/services/: agent_service.py
config/: __init__.py  prompt_loader.py  settings.py
docker/frontend/: Dockerfile  nginx.conf
frontend/: Dockerfile.frontend  eslint.config.ts  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: chat.ts
frontend/src/components/: ChatContainer.vue  ChatInput.vue  MessageBubble.vue  MessageItem.vue  MessageList.vue  Sidebar.vue
frontend/src/composables/: useChatMessages.ts  useMessageEdit.ts  useSessionManager.ts
frontend/src/types/: chat.ts
frontend/src/utils/: storage.ts
knowledge/: AI.txt  my_knowledge.txt
memory/: __init__.py  manager.py
model/: __init__.py  client.py
omniagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prompts/: rag.txt  system.txt
rag/: builder.py  chain.py  config.py  retriever.py
resources/: city_codes.json
scripts/: parse_city_codes.py
tests/: __init__.py  test_all.py
tools/: __init__.py  rag_tool.py  time_tool.py  weather_tool.py
